# AbeOne_Master

./: .ai-context-source-of-truth.json  .cursorignore  .cursorrules  .env.example  .gitignore  .project-boundary  1password_response.md  1password_response_email.txt  ABEKEYS_COMMIT_PLAN.md  ABEKEYS_COMPLETE.md  ABEKEYS_ENCRYPTED_GIT_GUIDE.md  ABEKEYS_ENCRYPTED_SUMMARY.md  ABEKEYS_READY_TO_COMMIT.md  ABEONE_SELF_DETERMINATION_CO_CREATION.md  ABE_APESHIT_MODE_ACTIVATED.md  ABE_CORE_BODY_PROPOSAL.md  ABE_KEYS_FOUND.md  ABE_KEYS_SEARCH_RESULTS.md  AEYON_YAGNI_APPROVAL_REPORT.md  AIAGENTSUITE_ANALYSIS.md  AI_97.8_PERCENT_PLAN.md  ALL_READY_FOR_BRYAN.md  ARCHITECTURAL_INTEGRITY_VALIDATION_REPORT.md  ATOMIC_CONVERGENCE_EXECUTED.md  ATOMIC_DETAILS_COMPREHENSIVE.md  ATOMIC_EXECUTION_COMPLETE.md  ATOMIC_EXECUTION_FINAL_VALIDATION.md  ATOMIC_EXECUTION_PLAN.md  ATOMIC_EXECUTION_PRECISION_VALIDATION.md  ATOMIC_EXECUTION_STATUS.md  ATOMIC_EXECUTION_WHILE_WAITING.md  ATOMIC_REVIEW_AND_ANALYSIS.md  ATOMIC_YAGNI_JOHN_VALIDATION.md  AXIOM_ANALYSIS_COMPLETE.md  AXIOM_ATOMIC_EXECUTION_PERFECTION.md  AXIOM_COMPLETE_REVIEW_AND_ANALYSIS.md  AXIOM_COMPREHENSIVE_EXPLORATION.md  AXIOM_EXPLANATION_VALIDATION.md  AbëKEYS_README.md  BRAVETTO_TEAM_SETUP.md  (+193 more)
.abeone_memory/: .checksums  BOOT_LOG.json  (+114 more)
codeguardians-gateway/codeguardians-gateway/: .env.example  API_ORCHESTRATOR_CHANGES.md  ARCHITECTURE.md  AWS_CREDENTIALS_GUIDE.md  CONTEXT_CONTINUATION_PROMPT.md  DEBUG_STARTUP.md  DEPLOYMENT_VALIDATION_GUIDE.md  DOMAIN_CONFIGURATION.md  ECR_DEPLOYMENT_STATUS.md  EEAAO_SPRINT_COMPLETE.md  FAILURE_PATTERN_TEST_GUIDE.md  FORENSIC_PATTERN_TEST_SUMMARY.md  Makefile.optimized  QUICKSTART.md  QUICK_START.md  README.md  TROUBLESHOOTING_DATABASE.md  VIRTUAL_SCENARIO_GUIDE.md  VSCODE_INTEGRATION.md  alembic.ini  comprehensive_test_results.json  demo_ab_testing.py  deploy.ps1  docker-compose.localhost.yml  entrypoint.sh  env.example  full_test_results.txt  how_aiguards_works.py  nginx.conf  prometheus_alerts.yml  push-to-ecr.sh  pyproject.toml  pytest.ini  run_with_docker_run.ps1  run_with_docker_run.sh  setup.sh  setup_secrets.ps1  temp_doc_audit.json  test-config.bat  test-handshake.py  (+8 more)
codeguardians-gateway/codeguardians-gateway/.cursor/rules/: comprehensive-standards.mdc
codeguardians-gateway/codeguardians-gateway/alembic/versions/: 0004_update_users_for_clerk_stripe.py  0005_add_stripe_products_prices.py  0006_add_stripe_customers.py  0008_add_clerk_user_fields.py  0010_allow_nullable_organization_subscription_for_invoices.py
codeguardians-gateway/codeguardians-gateway/app/: __init__.py
codeguardians-gateway/codeguardians-gateway/app/api/: __init__.py
codeguardians-gateway/codeguardians-gateway/app/core/: abekeys_config.py  audit_logger.py  aws_secrets.py  centralized_consul.py  centralized_database.py  centralized_logging.py  centralized_redis.py  circuit_breaker.py  clerk_auth.py  clerk_integration.py  clerk_jwks_cache.py  config.py  config_validation.py  connection_pool_optimizer.py  contextguard_integration.py  database.py  dynamic_config.py  graceful_shutdown.py  guard_metrics_migration.py  guard_orchestrator_optimizer.py  input_validation.py  job_queue.py  orchestrator_metrics.py  parallel_guard_executor.py  query_optimizer.py  real_metrics_tracker.py  response_cache.py  security.py  telemetry.py  tracing.py  unified_datetime.py  unified_filters.py  unified_responses.py
codeguardians-gateway/codeguardians-gateway/app/middleware/: usage_tracking.py
codeguardians-gateway/codeguardians-gateway/app/services/: bias_metrics.py  clerk_webhook_service.py  email_service.py  s3_service.py  stripe_service.py  stripe_webhook_service.py
codeguardians-gateway/codeguardians-gateway/app/utils/: __init__.py
codeguardians-gateway/codeguardians-gateway/config/: runtime.json
codeguardians-gateway/codeguardians-gateway/docs/: AWS_DEPLOYMENT_ARCHITECTURE.md  AWS_DEPLOYMENT_VALIDATION_GUIDE.md  CLERK_DIAGRAM_ONLY.md  CONTEXTGUARD_CONVERGENCE_PATTERNS.md  CONTEXTGUARD_DEPLOYMENT_FIX_SUMMARY.md  CONTEXTGUARD_DEPLOYMENT_INVESTIGATION.md  CONTEXTGUARD_RECURSIVE_ANALYSIS.md  CONTEXTGUARD_TRANSFORMATIONAL_ARCHITECTURE.md  CONVERGENCE_PATTERN_TEST_SUITE.md  DANNY_AWS_LINKERD_VIRTUAL_ENVIRONMENT.md  DEPLOYMENT_FIX_COMPLETE_SUMMARY.md  ENDPOINT_CHANGES_RECURSIVE_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  PAYLOAD_INVESTIGATION_FINDINGS.md  S3_FILE_STORAGE.md  TOKEN_REFRESH_ARCHITECTURE.md
codeguardians-gateway/codeguardians-gateway/docs/architecture/: README.md
codeguardians-gateway/codeguardians-gateway/k8s/: deployment.yaml
codeguardians-gateway/codeguardians-gateway/mock-services/: requirements.txt
codeguardians-gateway/codeguardians-gateway/scripts/: convergence_pattern_test_suite.py  convergence_test_results_20251103_202106.json  convergence_test_results_20251103_202208.json  convergence_test_results_20251103_202609.json  danny_complete_test_suite.sh  danny_quick_test.sh  deploy_codeguardians_ecosystem.py  init-db.sql  launch_no_fail_local.sh  run_all_failure_pattern_tests.sh  run_all_validation_tests.sh  scenario_simulator.py  setup_ai_context.py  simple_test.py  test_complete_system.py  test_linkerd_failure_patterns.py  validate_localhost_deployment.py  validate_simple.py
codeguardians-gateway/codeguardians-gateway/tests/: SWAGGER_UI_TEST_SUITE.md  conftest.py  llm_testing.py  test_ab_testing.py  test_clerk_webhook_service.py  test_clerk_webhooks_api.py  test_enterprise_api.py  test_saas_integration.py
hypervector-system/: CDF_FORENSIC_ANALYSIS.md  QUICKSTART.md  README.md  SYSTEM_SUMMARY.md  pyproject.toml  requirements.txt
hypervector-system/SDK/: __init__.py  client.py  exceptions.py
hypervector-system/api/: __init__.py  main.py  middleware.py  models.py
hypervector-system/api/routes/: __init__.py  health.py  vectors.py
hypervector-system/docs/: API.md  ARCHITECTURE.md  SDK.md
hypervector-system/scripts/: init_store.py  populate_test_data.py
hypervector-system/src/hypervector/: __init__.py  index.py  metadata.py  storage.py  utils.py
hypervector-system/tests/: test_sdk.py  test_storage.py
(+5525 files in other folders)
