[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "poisonguard"
version = "0.3.0"
authors = [
  { name="Vibe Coders", email="contact@vibecoders.com" },
]
description = "A tool to help diagnose and eventually mitigate LLM poisoning."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML>=6.0.0",
    "fastapi>=0.120.0",
    "uvicorn>=0.38.0",
    "python-json-logger>=2.0.0",
    "prometheus-client>=0.20.0",
    "psutil>=6.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
]
dev = [
    "flake8",
    "httpx",
    "pytest-cov",
    "pytest-asyncio",
]

[tool.setuptools]
packages = ["poisonguard", "poisonguard.plugins"]
package-dir = {"" = "src"}

[project.urls]
"Homepage" = "https://github.com/vibecoders/poisonguard"
"Bug Tracker" = "https://github.com/vibecoders/poisonguard/issues"