[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trust-guard"
version = "1.0.0"
description = "AI token trust and optimization service"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary"}
authors = [
    {name = "AIGuardians Team", email = "ai-guardians@company.com"},
]
keywords = ["ai", "token", "optimization", "trust", "confidence", "fastapi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "fastapi>=0.120.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.2.0",
    "structlog>=25.0.0",
    "python-json-logger>=2.0.0",
    "aiofiles>=24.0.0",
    "httpx>=0.28.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "slowapi>=0.1.9",
    "PyJWT>=2.10.0",
    "cryptography>=44.0.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-instrumentation-requests>=0.51b0",
    "opentelemetry-exporter-otlp>=1.30.0",
    "opentelemetry-exporter-prometheus>=0.59b0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/ai-guardians/trust-guard"
Repository = "https://github.com/ai-guardians/trust-guard.git"
Issues = "https://github.com/ai-guardians/trust-guard/issues"

[project.scripts]
trust-guard = "tokenguard.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tokenguard*"]

[tool.setuptools.package-data]
"tokenguard" = ["*.yml", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
